# TortureCard

./: .gitignore  AGENTS.md  Agents.md  CMakeLists.txt  README.md
.codebuddy/plan/ability-effect-system/: requirements.md
.codebuddy/plan/action-move-generation/: requirements.md
.codebuddy/plan/attack-effect-mechanic-system/: requirements.md
.codebuddy/plan/effect-resolution/: requirements.md
.codebuddy/plan/energy-discard-bin/: requirements.md
.codebuddy/plan/ex-mega-knockout-points/: requirements.md
.codebuddy/plan/game-loop-simulation/: requirements.md
.codebuddy/plan/game-loop-simulation-tests/: requirements.md
.codebuddy/plan/game-state-system/: requirements.md
.codebuddy/plan/pokemon-evolution/: requirements.md
.codebuddy/plan/setup-hand-generation/: requirements.md
decks/: altaria.json  arceusdialga.json
include/: ptcgp_sim.h
include/ptcgp_sim/: ability_mechanic.h  ability_mechanic_dictionary.h  action.h  attach_attack_player.h  attack_mechanic.h  attack_mechanic_dictionary.h  card.h  common.h  database.h  deck.h  effects.h  game_loop.h  game_state.h  mechanic.h  mechanic_map.h  move_generation.h  player.h  simulator.h
src/cli/: main.cpp
src/lib/: ability_mechanic.cpp  ability_mechanic_dictionary.cpp  action.cpp  attach_attack_player.cpp  attack_mechanic.cpp  attack_mechanic_dictionary.cpp  card.cpp  database.cpp  deck.cpp  effects.cpp  game_loop.cpp  game_state.cpp  jsmn_helpers.h  mechanic.cpp  mechanic_map.cpp  move_generation.cpp  simulator.cpp
tests/: CMakeLists.txt  test_ability_effects.cpp  test_attack_effects.cpp  test_card.cpp  test_deck.cpp  test_deck_validation.cpp  test_effect_resolution.cpp  test_evolution.cpp  test_ex_mega_points.cpp  test_game_loop.cpp  test_move_generation.cpp  test_setup_hand.cpp  test_simulator.cpp
tests/decks/: test_deck.json
